# ai-agents

./: .env.example  .gitignore  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
src/agents/: ingest.py  vectorstore.py  web_research.py
src/api/: app.py
src/utils/: settings.py
tests/: test_ingest.py  test_ingest_online.py  test_smoke.py  test_tools_live.py  test_vectorstore.py
