[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-agents"
version = "0.1.0"
description = "LangGraph/LlamaIndex agents with Tavily + Firecrawl, FastAPI wrapper"
readme = "README.md"
authors = [{ name = "Bryan Belmont", email = "bryan.belmont@seedthought.org" }]
requires-python = ">=3.12"
dependencies = [
  "chromadb>=1.0.16",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "langchain>=0.3.27",
  "langchain-chroma>=0.2.5",
  "langchain-openai>=0.3.29",
  "langgraph>=0.6.4",
  "llama-index>=0.13.0",
  "pydantic>=2",
  "python-dotenv>=1.1.1",
  "tavily-python>=0.7.10",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "ruff>=0.5"
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
# List the package *paths* you want included in the wheel
sources = ["src"]
only-include = ["agents", "api", "rag", "utils"]
